# letsgo-trains

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
data/: text-letsgo+yaml.xml  uk.dutton.letsgo-trains.desktop
docs/: conf.py  index.rst
docs/extending/: index.rst
docs/ref/: index.rst
docs/track-library/: index.rst
docs/using/: automation.rst  index.rst
letsgo/: dnd.py  drawing.py  layout.py  registry_meta.py  routeing.py  sensor.py  signals.py  speed_estimation.py  station.py  topham_hatt.py  track.py  track_point.py  trackside_item.py  train.py  train_controller.py
letsgo/control/: __init__.py  base.py  maestro.py  powered_up.py
letsgo/data/: gschemas.compiled  letsgo.glade  uk.dutton.letsgo-trains.gschema.xml
letsgo/data/layouts/: simple.yaml
letsgo/gtk/: __main__.py  layout.py  layout_drawingarea.py  trains.py  utils.py  window.py
letsgo/gtk/control/: __init__.py  base.py  maestro.py  powered_up.py
letsgo/layout_parser/: __init__.py  base.py  letsgo.py  ncontrol.py
letsgo/layout_serializer/: __init__.py  base.py  letsgo.py  ncontrol.py
letsgo/pieces/: __init__.py  base.py  crossover.py  curve.py  points.py  straight.py
letsgo/tests/: __init__.py  test_drawing.py  test_gtk.py  test_layout.py  test_layout_drawer.py  test_letsgo_format.py  test_routeing.py  test_track_point.py
letsgo/tests/data/: circle.lgl
letsgo/utils/: quadtree.py
trains/: dnd.py  drawing.py  drawing_options.py  layout.py  registry_meta.py  routeing.py  sensor.py  signals.py  speed_estimation.py  station.py  test.py  topham_hatt.py  track.py  track_point.py  train.py  usbtest.py
trains/control/: base.py  maestro.py  powered_up.py
trains/data/: apps.uk.dutton.trains.gschema.xml  cars.yaml  trains.glade
trains/data/layouts/: other.yaml  point-eight.yaml  simple.yaml  stations.yaml  test.yaml
trains/gtk/: __main__.py  configure_dialog.py  layout.py  layout_drawingarea.py  trains.py
trains/layout_parser/: __init__.py  base.py  letsgo.py  ncontrol.py
trains/layout_serializer/: __init__.py  base.py  letsgo.py  ncontrol.py
trains/pieces/: __init__.py  base.py  crossover.py  curve.py  points.py  straight.py
trains/tests/: __init__.py  drawing.py  layout.py  routeing.py  test_drawing.py  test_layout.py  test_layout_drawer.py  test_routeing.py  test_track_point.py  track_point.py
trains/utils/: quadtree.py
